[gd_scene load_steps=11 format=3 uid="uid://5khqtmuua7hj"]

[ext_resource type="Texture2D" uid="uid://5gn5f28q6pr4" path="res://assets/ui_grad.tres" id="1_is0m5"]
[ext_resource type="Script" uid="uid://bsikiqkdkd5t3" path="res://sym.gd" id="2_xr6se"]
[ext_resource type="Texture2D" uid="uid://bcgmc6a5yhu5a" path="res://assets/arrow.png" id="3_xr6se"]
[ext_resource type="Script" uid="uid://ceoow4mjcym5c" path="res://graph.gd" id="4_iy5vb"]

[sub_resource type="LabelSettings" id="LabelSettings_7256w"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_xr6se"]
font_size = 25
font_color = Color(0.7921569, 0.7921569, 0.7921569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iy5vb"]
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8lqrg"]
font_size = 25
font_color = Color(0.7921569, 0.7921569, 0.7921569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xgvb0"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_xnxcm"]
font_size = 25
font_color = Color(0.7921569, 0.7921569, 0.7921569, 1)

[node name="gradient" type="TextureRect"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 960.0
grow_horizontal = 2
texture = ExtResource("1_is0m5")
script = ExtResource("2_xr6se")
metadata/sym = ""

[node name="kline" type="HTTPRequest" parent="."]

[node name="icon" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 306.0
offset_bottom = 306.0
scale = Vector2(0.4, 0.4)

[node name="name" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 65.0
offset_right = 380.0
offset_bottom = 115.0
label_settings = SubResource("LabelSettings_7256w")

[node name="price" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 115.0
offset_right = 330.0
offset_bottom = 150.0
label_settings = SubResource("LabelSettings_xr6se")

[node name="status" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 100.0
grow_horizontal = 0
color = Color(0, 0, 0, 0)

[node name="text" type="Label" parent="status"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -17.5
offset_right = 36.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_iy5vb")

[node name="price_diff" type="Label" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 112.0
offset_right = 885.0
offset_bottom = 147.0
label_settings = SubResource("LabelSettings_8lqrg")
horizontal_alignment = 2

[node name="arrow" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 895.0
offset_top = 108.0
offset_right = 935.0
offset_bottom = 148.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(20, 20)
texture = ExtResource("3_xr6se")

[node name="percent_diff" type="Label" parent="."]
layout_mode = 0
offset_left = 940.0
offset_top = 112.0
offset_right = 1030.0
offset_bottom = 147.0
label_settings = SubResource("LabelSettings_xgvb0")

[node name="graph" type="Control" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -486.0
offset_top = 250.0
offset_right = 486.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_iy5vb")
metadata/krect = []

[node name="dots" type="Label" parent="graph"]
layout_mode = 1
offset_top = 285.0
offset_right = 488.0
offset_bottom = 320.0
scale = Vector2(2, 1)
text = "......................................................................."
label_settings = SubResource("LabelSettings_xnxcm")

[connection signal="request_completed" from="kline" to="." method="_on_kline_req_done"]
